--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,25 +1,53 @@
+:root {
+  --branding-color: #6c63ff;
+  --secondary-color: #f9f7fe;
+  --default-font-family: "poppins", sans-serif;
+  --heading-font-family: "Playfair Display", serif;
+}
 body {
-  background-color: white;
+  font-family: var(--default-font-family);
 }
 
-h1 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: #000000;
-  font-family: "Playfair Display", serif;
-  font-weight: 700;
+  font-family: var(--heading-font-family);
+  font-weight: bold;
   font-style: normal;
 }
 p {
-  font-family: "poppins", sans serif;
-}
-:root {
-  --branding-color: #f9f7fe;
-  --main-text: ;
+  font-weight: normal;
 }
 
 .hero {
-  background-color: var(--branding-color);
+  background-color: var(--secondary-color);
   text-align: center;
+  padding: 160px 20px;
 }
 .hero p {
+  font-size: 36px;
+  font-weight: bold;
+  line-height: 54px;
+  margin: 0;
+  color: #272142;
+}
+.hero h1 {
   font-size: 96px;
+}
+.hero h2 {
+  line-height: 36px;
+  font-family: var(--default-font-family);
+  font-weight: 400;
+}
+.btn-branding {
+  background: var(--branding-color);
+  color: #ffffff;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+  border-radius: 4px;
 }
