--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -21,8 +21,18 @@ h6 {
 }
 p {
   font-weight: normal;
+  text-align: center;
+  line-height: 27px;
 }
-
+h2 {
+  font-size: 85px;
+  line-height: 85px;
+}
+h3 {
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 85px;
+}
 .hero {
   background-color: var(--secondary-color);
   text-align: center;
@@ -35,13 +45,14 @@ p {
   margin: 0;
   color: #272142;
 }
-.hero h1 {
+h1 {
   font-size: 96px;
 }
-.hero h2 {
+h2 {
   line-height: 36px;
   font-family: var(--default-font-family);
   font-weight: 400;
+  font-size: 24px;
 }
 .btn-branding {
   background: var(--branding-color);
@@ -50,4 +61,50 @@ p {
   line-height: 27px;
   padding: 15px 30px;
   border-radius: 4px;
+}
+.project-paragraph {
+  font-family: var(--default-font-family);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  text-align: left;
+  line-height: 2;
+  margin: 30px 0px;
+  color: rgba(39, 33, 66, 0.7);
+}
+
+.btn-discover {
+  color: var(--branding-color) !important;
+  border: solid 1px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+  border-radius: 4px;
+}
+.project-description {
+  padding: 120px 60px;
+}
+@media (max-width: 960px) {
+  .proejct-description {
+    padding: 0;
+    text-align: center;
+  }
+  h2 {
+    font-size: 24px;
+  }
+  h3 {
+    font-size: 42px;
+    text-align: center;
+  }
+  h1 {
+    font-size: 42px;
+  }
+  .hero {
+    background-color: var(--secondary-color);
+    text-align: center;
+    padding: 80px 20px;
+  }
+  .project-paragraph {
+    text-align: center;
+  }
 }
