--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -39,11 +39,12 @@ h3 {
   padding: 160px 20px;
 }
 .hero p {
-  font-size: 36px;
+  font-size: 30px;
   font-weight: bold;
   line-height: 54px;
   margin: 0;
   color: #272142;
+  margin-bottom: 20px;
 }
 h1 {
   font-size: 96px;
@@ -51,8 +52,8 @@ h1 {
 h2 {
   line-height: 36px;
   font-family: var(--default-font-family);
-  font-weight: 400;
-  font-size: 24px;
+  font-weight: 700;
+  font-size: 20px;
 }
 .btn-branding {
   background: var(--branding-color);
@@ -101,16 +102,18 @@ h2 {
   margin-right: 50px;
 }
 @media (max-width: 960px) {
-  .proejct-description {
-    padding: 0;
+  .project-description {
+    padding: 60px 30px;
     text-align: center;
   }
   h2 {
     font-size: 24px;
+    padding: 10px;
   }
   h3 {
     font-size: 42px;
     text-align: center;
+    line-height: 64px;
   }
   h1 {
     font-size: 42px;
@@ -124,11 +127,23 @@ h2 {
     text-align: center;
   }
   .about-section-content {
-    text-align: center !important;
+    text-align: center;
     margin-right: 0;
   }
   .about-section {
-    text-align: center;
     padding: 0;
+    text-align: center;
+  }
+  .about-section p {
+    text-align: center;
+    margin: auto 0%;
+    padding: 10px;
+  }
+  .btn-discover {
+    display: block;
+  }
+  .btn-branding {
+    line-height: 20px;
+    padding: 10px 15px;
   }
 }
