--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -98,6 +98,30 @@ h2 {
   font-size: 16px;
   line-height: 30px;
 }
+nav {
+  padding: 20px 0;
+}
+.logo {
+  max-width: 150px;
+}
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+nav li {
+  display: inline;
+  list-style: none;
+  margin-left: 10px;
+  line-height: 42px;
+}
+nav a {
+  text-decoration: none;
+  color: #272142;
+  transition: all 100ms ease-in-out;
+}
+nav a:hover {
+  color: var(--branding-color);
+}
 .about-section-content {
   margin-right: 50px;
 }
