--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -102,11 +102,12 @@ nav {
   padding: 20px 0;
 }
 .logo {
-  max-width: 150px;
+  max-width: 80px;
 }
 nav ul {
   padding: 0;
   margin: 0;
+  text-align: right;
 }
 nav li {
   display: inline;
@@ -114,9 +115,12 @@ nav li {
   margin-left: 10px;
   line-height: 42px;
 }
+nav li.active a {
+  color: var(--branding-color);
+}
 nav a {
   text-decoration: none;
-  color: #272142;
+  color: rgb(33, 37, 41, 0.7);
   transition: all 100ms ease-in-out;
 }
 nav a:hover {
