--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -85,14 +85,14 @@ h2 {
 .project-description {
   padding: 120px 60px;
 }
-.about-section {
+.content-container {
   padding: 160px 20px;
 }
-.about-section h1 {
+.content-container h1 {
   font-size: 64px;
   line-height: 85px;
 }
-.about-section p {
+.content-container p {
   text-align: left;
   font-weight: 400;
   font-size: 16px;
@@ -126,7 +126,7 @@ nav a {
 nav a:hover {
   color: var(--branding-color);
 }
-.about-section-content {
+.content {
   margin-right: 50px;
 }
 @media (max-width: 960px) {
@@ -154,15 +154,15 @@ nav a:hover {
   .project-paragraph {
     text-align: center;
   }
-  .about-section-content {
+  .content {
     text-align: center;
     margin-right: 0;
   }
-  .about-section {
+  .content-container {
     padding: 0;
     text-align: center;
   }
-  .about-section p {
+  .content-container p {
     text-align: center;
     margin: auto 0%;
     padding: 10px;
