--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,6 +1,6 @@
 :root {
-  --branding-color: #6c63ff;
-  --secondary-color: #f9f7fe;
+  --branding-color: #ec6e4c;
+  --secondary-color: #fefaf4;
   --default-font-family: "poppins", sans-serif;
   --heading-font-family: "Playfair Display", serif;
 }
@@ -88,15 +88,35 @@ h2 {
 .content-container {
   padding: 160px 20px;
 }
-.content-container h1 {
+.content h1 {
   font-size: 64px;
   line-height: 85px;
 }
-.content-container p {
+.content h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+.content h3 {
+  font-family: var(--default-font-family);
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 36px;
+  text-align: center;
+  margin: 50px 0;
+  padding: 0;
+}
+.content p {
   text-align: left;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 30px;
+}
+.content img {
+  width: 512px;
+  height: 683px;
+  padding: 0;
+  margin: 0;
+  display: grid;
 }
 nav {
   padding: 20px 0;
@@ -127,7 +147,7 @@ nav a:hover {
   color: var(--branding-color);
 }
 .content {
-  margin-right: 50px;
+  margin: 50px 0;
 }
 @media (max-width: 960px) {
   .project-description {
