--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -24,9 +24,13 @@ p {
   text-align: center;
   line-height: 27px;
 }
+h1 {
+  font-size: 96px;
+  line-height: 1.5;
+}
 h2 {
-  font-size: 85px;
-  line-height: 85px;
+  font-weight: 400;
+  font-size: 64px;
 }
 h3 {
   font-weight: 700;
@@ -39,21 +43,17 @@ h3 {
   padding: 160px 20px;
 }
 .hero p {
-  font-size: 30px;
+  font-size: 36px;
   font-weight: bold;
   line-height: 54px;
   margin: 0;
   color: #272142;
-  margin-bottom: 20px;
 }
-h1 {
-  font-size: 96px;
-}
-h2 {
-  line-height: 36px;
-  font-family: var(--default-font-family);
-  font-weight: 700;
-  font-size: 20px;
+.hero h2 {
+  font-family: var(--heading-font-family);
+  font-weight: normal;
+  line-height: 1.5;
+  font-size: 24px;
 }
 .btn-branding {
   background: var(--branding-color);
@@ -99,14 +99,10 @@ h2 {
 .content h3 {
   font-family: var(--default-font-family);
   font-size: 24px;
-  font-weight: 700;
-  line-height: 36px;
-
-  margin: 50px 0;
-  padding: 0;
+  line-height: 1.5;
+  margin: 0 50px;
 }
 .content p {
-  text-align: left;
   font-weight: 400;
   font-size: 14px;
   line-height: 30px;
@@ -146,7 +142,7 @@ nav a:hover {
   color: var(--branding-color);
 }
 .content {
-  margin: 50px 0;
+  margin: 30px;
 }
 @media (max-width: 960px) {
   .project-description {
