--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -51,7 +51,7 @@ h3 {
 }
 .hero h2 {
   font-family: var(--heading-font-family);
-  font-weight: normal;
+  font-weight: 700;
   line-height: 1.5;
   font-size: 24px;
 }
